--- a/css/hyde.css
+++ b/css/hyde.css
@@ -59,7 +59,8 @@ html {
   color: rgba(255,255,255,.5);
 	background-image: url("/images/profile.png");
 	background-repeat: no-repeat;
-	background-size: cover
+	background-size: cover;
+	background-position: center;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -67,7 +68,8 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 22rem;
+		max-width: 100%;
+		max-height: 100%;
   }
 
   footer {
